--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -17,7 +17,7 @@ body {
 }
 
 .section {
-    padding: 100px 0;
+    padding: 100px 12px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
